WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25784
Leaks seen on HTTP tests
https://bugs.webkit.org/show_bug.cgi?id=25784
Summary
Leaks seen on HTTP tests
Alexey Proskuryakov
Reported
2009-05-14 02:20:20 PDT
There are many leaks seen on HTTP tests. Some of them seem to be in system frameworks, so I'm going to fix some, and file Radar bugs for others. For those who can see it, one Radar bug is <
rdar://problem/6886937
>.
Attachments
proposed fix
(2.34 KB, patch)
2009-05-14 02:23 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-05-14 02:23:49 PDT
Created
attachment 30320
[details]
proposed fix This fixes two bugs I found.
Alexey Proskuryakov
Comment 2
2009-05-14 05:09:13 PDT
(In reply to
comment #0
)
> For those who can see it, one Radar bug is <
rdar://problem/6886937
>.
Another one: <
rdar://problem/6887278
>.
Darin Adler
Comment 3
2009-05-14 09:24:24 PDT
Comment on
attachment 30320
[details]
proposed fix
> - NSMutableURLRequest *mutableRequest = [request.nsURLRequest() mutableCopy]; > + NSMutableURLRequest *mutableRequest = [[request.nsURLRequest() mutableCopy] autorelease];
Clearly this was just introduced by the bug fix for content sniffing. I'd prefer to find a way to fix this with an additional local variable and a normal release rather than autorelease. r=me as is, but consider making it use release instead of autorelease
Alexey Proskuryakov
Comment 4
2009-05-14 09:47:24 PDT
Committed
r43709
. (In reply to
comment #3
)
> r=me as is, but consider making it use release instead of autorelease
I think that it would be much more interesting - but also more difficult - to avoid autorelease in common code path.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug