        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=25784
        Leaks seen on HTTP tests

        We should change ResourceHandleMac.mm to use smart pointers some day, but this is a minimal fix.

        * platform/network/mac/ResourceHandleMac.mm:
        (WebCore::ResourceHandle::loadResourceSynchronously): Release mutable request copy made for
        disabling content sniffing, matching the normal code path.
        (-[WebCoreSynchronousLoader connection:willSendRequest:redirectResponse:]): Release m_user
        and m_pass before overwriting.
        (-[WebCoreSynchronousLoader connection:didReceiveAuthenticationChallenge:]): Ditto.



git-svn-id: svn://svn.chromium.org/blink/trunk@43709 bbb929c8-8fbe-4397-9dbb-9b2b20218538